# PredictionMarket

./: .dockerignore  .gitignore  CLAUDE_OPUS_5_1_CODEX_UNDERSTANDING.md  CURSOR_GPT_5_1_CODEX_UNDERSTANDING.md  CURSOR_OPUS_4_5_PROJECT_UNDERSTANDING.md  Cargo.toml  DOCKER.md  build-docker.sh  clippy.toml  docker-compose.yml  go.work  go.work.sum  match_order.md  readme.md  rustfmt.toml  tmp.txt
api/: Cargo.toml
api/src/: api_error.rs  api_types.rs  cache.rs  config.rs  consts.rs  consumer.rs  db.rs  graceful.rs  handlers.rs  init.rs  internal_service.rs  load.rs  main.rs  rpc_chat_service.rs  rpc_client.rs  server.rs  singleflight.rs  user_handlers.rs
asset/: Cargo.toml
asset/src/: asset_service.rs  config.rs  consts.rs  db.rs  graceful.rs  handlers.rs  init.rs  lib.rs  main.rs  user_event.rs
asset/tests/: test_cancel_order.rs  test_create_order.rs  test_deposit_withdraw.rs  test_split_merge.rs
asset/tests/test_utils/: mod.rs
common/: Cargo.toml
common/src/: asset_rpc_client.rs  common_env.rs  consts.rs  depth_types.rs  engine_types.rs  event_types.rs  graceful.rs  key.rs  lib.rs  logging.rs  model.rs  onchain_msg_types.rs  postgres_pool.rs  privy_jwt.rs  processor_types.rs  rate_limit.rs  redis_lock.rs  redis_pool.rs  store_types.rs  websocket_types.rs
deploy/: common.env
deploy/api/: Dockerfile  dev.toml
deploy/asset/: Dockerfile  dev.toml
deploy/depth/: Dockerfile  dev.toml
deploy/event/: Dockerfile  dev.toml
deploy/match_engine/: Dockerfile  dev.toml
deploy/onchain_msg/: Dockerfile  dev.toml
deploy/processor/: Dockerfile  dev.toml
deploy/statistics/: Dockerfile  dev.toml
deploy/store/: Dockerfile  dev.toml
deploy/websocket_depth/: Dockerfile  dev.toml
deploy/websocket_user/: Dockerfile  dev.toml
depth/: Cargo.toml
depth/src/: config.rs  consts.rs  consumer.rs  graceful.rs  init.rs  main.rs  pusher.rs  storage.rs
docs/: api.md  think.txt  websocket_depth.md  websocket_user.md
event/: Cargo.toml
event/src/: config.rs  consts.rs  consumer.rs  db.rs  init.rs  main.rs  statistic.rs  types.rs
match_engine/: Cargo.toml
match_engine/src/: config.rs  consts.rs  engine.rs  graceful.rs  helper.rs  init.rs  input.rs  lib.rs  load.rs  main.rs  orderbook.rs  output.rs  types.rs
match_engine/tests/: README_TESTS.md  TEST_DOCUMENTATION.md  match_engine_tests.rs
onchain_msg/: Cargo.toml
onchain_msg/src/: cache.rs  config.rs  consts.rs  db.rs  event_consumer.rs  init.rs  main.rs  onchain_action_consumer.rs  rpc_client.rs  trade_response_consumer.rs
processor/: Cargo.toml
processor/src/: config.rs  consts.rs  consumer.rs  graceful.rs  init.rs  main.rs  rpc_client.rs
proto/: Cargo.toml  asset.proto  build.rs  fmt.sh
proto/src/: asset.rs  lib.rs
script/: api.sh  asset.sh  clear_redis.sh  database.sql  depth.sh  event.sh  fmt.sh  git.sh  match_engine.sh  onchain_msg.sh  processor.sh  reset_database.sh  set_env.sh  start_core.sh  start_others.sh  status.sh  stop_all.sh  store.sh  think.txt  websocket_depth.sh  websocket_user.sh  workspace.sh
script/bot_go/: .gitignore  go.mod  go.sum  main.go
script/bot_go/eip712/: eip712.go  order.go
script/migrations/: 001_asset_history_add_trade_order_ids.sql  add_update_id.sql
script/mock/: api.sh  events.sh  onchain_msg.sh
script/mock/mock_go/: .gitignore  Makefile  README.md  go.mod  run_all.sh
script/mock/mock_go/api_key/: main.go
script/mock/mock_go/send_event/: README.md  go.mod  main.go
script/mock/mock_go/trade_responder/: main.go
script/mock/mock_go/websocket_depth/: main.go
script/mock/mock_go/websocket_user/: main.go
statistics/: Cargo.toml
statistics/src/: airdrop.rs  calculator.rs  config.rs  consts.rs  db.rs  init.rs  main.rs  scheduler.rs
store/: Cargo.toml  README.md
store/src/: config.rs  consts.rs  consumer.rs  init.rs  main.rs  storage.rs
tests/: ASSET_TESTS_README.md  Cargo.toml  README.md
tests/benchmark/: Cargo.toml  README.md
tests/benchmark/src/: lib.rs  main.rs  reporter.rs  scenarios.rs
tests/src/: lib.rs  test_utils.rs
tests/tests/: asset_cancel_order.rs  asset_create_order.rs  asset_deposit_withdraw.rs  asset_split_merge.rs  match_engine_core_tests.rs  match_engine_tests.rs
websocket_depth/: Cargo.toml
websocket_depth/src/: config.rs  consts.rs  consumer.rs  errors.rs  handler.rs  init.rs  main.rs  storage.rs
websocket_user/: Cargo.toml
websocket_user/src/: consts.rs  consumer.rs  graceful.rs  handler.rs  init.rs  main.rs  storage.rs
