[workspace]
members = [
    "match_engine",
    "common",
    "store",
    "api",
    "processor",
    "depth",
    "event",
    "onchain_msg",
    "asset",
    "proto",
    "websocket_depth",
    "websocket_user",
    "statistics",
    "tests",
    "tests/benchmark",
]
resolver = "2"


[workspace.dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tower = { version = "0.5", features = ["limit"] }
tungstenite = "0.28"
futures-util = "0.3"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "std",
    "json",
    "local-time",
    "env-filter",
] }
tracing-appender = "0.2"
config = "0.15"
dotenvy = "0.15"
anyhow = "1.0"
chrono = { version = "=0.4.38", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
redis = { version = "0.32", features = [
    "streams",
    "tokio-comp",
    "safe_iterators",
] }
deadpool-redis = { version = "0.22", features = ["serde"] }
rust_decimal = { version = "1.39.0", features = ["serde-with-str"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
async-trait = "0.1"
thiserror = "2.0.17"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "derive",
    "chrono",
    "uuid",
    "rust_decimal",
    "macros",
] }
dashmap = "6.1.0"
fastrand = "2.3.0"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs", "use_pem"] }
reqwest = { version = "0.12.24", features = ["json"] }
rustc-hash = "2"
async_singleflight = "0.6"
toml = "0.9"
dotenv = "0.15"
smallvec = "1.13"
alloy = { version = "1", features = ["provider-http", "signer-local", "contract"] }
url = "2"
