[package]
name = "api"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
common = { path = "../common" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
futures-util = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
proto = { path = "../proto" }
tonic = { workspace = true }
reqwest = { workspace = true }
async_singleflight = { workspace = true }