[package]
name = "common"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
fastrand = { workspace = true }
jsonwebtoken = { workspace = true }
tonic = { workspace = true }
proto = { path = "../proto" }
