[package]
name = "event"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
common = { path = "../common" }
rust_decimal = { workspace = true }
