[package]
name = "match_engine"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "match_engine"
path = "src/main.rs"

[lib]
name = "match_engine"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
rust_decimal = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
common = { path = "../common" }
