[package]
name = "onchain_msg"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "onchain_msg"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
common = { path = "../common" }
proto = { path = "../proto" }
tonic = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }