[package]
name = "processor"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "processor"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
common = { path = "../common" }
proto = { path = "../proto" }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
futures-util = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }