[package]
name = "statistics"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "statistics"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
common = { path = "../common" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
alloy = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
