[package]
name = "websocket_depth"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
toml = { workspace = true }
common = { path = "../common" }
