[package]
name = "websocket_user"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
sqlx = { workspace = true }
common = { path = "../common" }
