[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
# 引用 workspace 中的 crate
match_engine = { path = "../../match_engine" }
common = { path = "../../common" }

# 使用 workspace 依赖
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
fastrand = { workspace = true }

# 压测专用依赖
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
hdrhistogram = "7.5"
colored = "2.1"
tabled = "0.16"
indicatif = "0.17"
mimalloc = "0.1"
core_affinity = "0.8"
